<resources>
    <string name="app_name">财大通</string>
    <string name="xiaoxun">校训:信敏廉毅</string>
    <string name="pingmiantu">校区平面图</string>
    <string name="fengjing">校园风景</string>
    <string name="zhinna">新生指南</string>
    <string name="xiaoyuanshenghuo">校园生活</string>
    <string name="xinshengzhinan">新生指南</string>
    <string name="xiaoyuanfengjing">校园风景</string>
    <string name="chuxingzhinan">出行指南</string>
    <string name="wodeweizhi">我的位置</string>
    <string name="guanjiandianchaxun">周边搜索</string>
    <string name="gongjiaochaxun">公交查询</string>
    <string name="action_search">搜索</string>
    <string name="haomabaishitong">号码百事通</string>
    <string name="action_add">添加号码</string>
    <string name="newnum_title">添加新号码</string>
    <string name="newnum_name">姓名</string>
    <string name="newnum_number">电话</string>
    <string name="newnum_sort">类别</string>
    <string name="newnum_keyword">关键字</string>
    <string name="newnum_submit">提交</string>
    <string name="newnum_reset">重置</string>
    <string name="youwannanchang">游玩南昌</string>
    <string name="jingdianjieshao">景点介绍</string>
    <string name="xuezhangxuejiejiyu">学长学姐寄语</string>
    <string name="ruxiaodiyizhan">入校第一站</string>
    <string name="qinglianyoubuzhu">勤练有补助</string>
    <string name="woshiyigebin">我是一个兵</string>
    <string name="didamudidi">抵达目的地</string>
    <string name="zhenglixinzhuang">整理新装</string>
    <string name="shenghuowanhuatong">生活万花筒</string>
    <string name="jiejiaoxinpengyou">结交新朋友</string>
    <string name="luxianguihua">路线规划</string>
    <string name="action_upload">上传本地联系人</string>
    <string name="action_download">下载财大通联系人</string>
    <string name="menu_download">下载该联系人</string>
    <string name="menu_delete">删除该联系人</string>
    <string name="menu_phone">呼叫该联系人</string>
    <string-array name="titles">
        <item>交通示意图</item>
        <item>蛟桥校区</item>
        <item>麦庐校区</item>
        <item>枫林校区</item>
    </string-array>
    <!--景点详情-->
    <string-array name="texts">
        <item>  滕王阁位于江西省南昌市沿江路赣江与抚河故道交汇处与黄鹤楼、岳阳楼并称为江南三大名楼。1991年被国家旅游局列为\"中国旅游胜地四十佳\"提名单位；2001年1月被国家旅游局授予首批\"国家AAAA级旅游区（点）\"称号，2004年被国务院批准为国家重点风景名胜区。重建后的滕王阁已成了南昌，也是江西省的一处重要的旅游景点。
            江南三大名楼\"之一的腾王阁，屡毁屡建达二十八次之多。新落成的腾王阁，较一千三百多年前的建筑更嵯峨雄壮，充分表现\"飞阁流丹，下临无地\"的气势。投资建造了\"马当神\"号豪华游艇供游客畅游赣江；建造了滕王阁宾馆、贵宾宴会厅、仿古展演厅、名人字画厅等。登楼眺望，南昌景致尽收眼底。滕王阁之所以享有巨大名声，很大程度上归功于一篇脍炙人口的散 文《滕王阁序》。传说当时诗人王勃探亲路过南昌，正赶上阎都督重修 滕王阁后，在阁上大宴宾客，王勃当场一气写下这篇令在座宾客赞服的 《秋日登洪府滕王阁饯别序》（即《滕王阁序》），王勃作序后，又有王仲舒作记，王绪作赋，历史上称为\"三王文章\"。从此，序以阁而闻 名，阁以序而著称。1300多年来，滕五阁历经兴废28次，最后在1926年 被北洋军阀邓如琢部纵火烧毁。"
        苏东坡手书的千古名篇 《滕王阁序》。《滕王阁序》中 最著名的两句是\"落霞与孤鹜齐飞，秋水共长天一色\"。这已作为主阁 正门的巨联。暮秋之后，鄱阳湖区将有成千上万只侯鸟飞临，那将构成 一幅活生生的\"落霞与孤鹜齐飞，秋水共长天一色\"，成为滕王阁的 一大胜景。</item>
        <item>  八大山人纪念馆地处南昌市南郊十五华里的青云谱道院内，青云谱道院是一座具有江南地方特色的园林。园林之南部、西部面临宽阔的梅湖，泊岸曲折，水明如镜，独揽湖山田园之美。青云谱园内，苍木翠绿，掩映着殿宇云阁，丹桂碧池，环抱住凉亭月楼，逸静幽雅，宛若仙境。\n园中现存有关帝、吕祖、许祖三官、斗姆、峤园等六座殿堂，中间以天地相融，东西接庑殿四座，中部鹤巢二间，抬梁式构架，悬山顶、青砖灰瓦的粉墙，精而不华，青而不饰，古朴典雅，风格独具。</item>
        <item>  梦山胜迹,原名罕王峰，是南昌市一个较大的旅游景区，地处市郊30公里，景区面积15平方公里。青山绿水，风景多彩，盛夏气候凉爽。景区有20多个风景点，是一个美丽的旅游风景胜地和避暑山庄。\n据历史的记载，三国蜀炎兴元年（263年），蜀汉为晋所灭，昭烈帝刘备之孙刘护，携家从四川来到这里，见山势险要，便傍山结寨距守。其母罗氏，见天下大势不可逆转，劝子归晋，封为广惠王，母封协庆夫人。太康元年（280年），晋灭东吴。东吴余党败走西山藩源，与山贼勾结，拥众万余，焚烧荡空，民受其害。是年九月，刘护率军破贼，因功封罕王，赐所住山峰为罕王峰。刘护之母常感人人梦，俗称\"梦娘娘\"，民间历来有人求梦，遂又称梦山。</item>
        <item>  位于赣江中下游的鄱阳湖之滨，与著名的旅游胜地庐山隔湖相望，与世界候鸟保护区鄱阳湖紧连一体，紧紧接壤南昌昌北机场，京九铁路、昌九高速公路从公园擦肩而过，乐昌水泥公路贯通公园全境，处于庐山、鄱阳湖候鸟观赏区、南昌滕王阁旅游带之间，地理位置优越，交通条件便利。\n公园总面积2.5万亩，森林面积1.8万亩，在茂密葱葱的森林里，每年的3-10月间，相继都有70-80羽鹭鸟在林间栖息、繁衍，不同种类的鹭鸟，分片栖息，麻鹭灰鹭在东片林，大、中、小白鹭在西片林，绿色的池鹭与黄色的苹鹭在南片林，鹭鸟飞时遮天蔽地、站落婷婷玉立、远观群星点点、近望美丽可爱，在江南形成了一大奇观，是南昌市大十景点之一，是全国最大的鹭鸟主要的生息之地，据有关野生动物学者及鸟类专家考证为中国之最。</item>
        <item>  西山万寿宫是纪念许真君而修建的一座宫殿。坐落于距南昌市西南三十公里的西山逍遥山下。道教认为除了凡人居住的世界外，还有神仙的处所三十六洞天，七十二福地。许真君栖身修炼的西山则为第四十福地。因他在此仙逝，故又称\"飞升福地\"。公元1520年（明正德十五年），皇帝题额《妙济万寿宫》对宫内建筑作了重大修葺。至清代增建关帝阁、万寿宫门、这时是万寿宫极盛时期，占地三万一千平方米。宫门之内，正殿琉璃为瓦，重檐画栋，金碧辉煌，气势宏伟。绣金帷里，真君塑像端坐中央，坐像头部为黄铜铸成，重500斤。12真人分列两旁，吴猛、郭璞站立坛前。高明殿等三殿之前，6株参天古柏苍老遒劲，四季常青，相传最大一株为许真君亲手所植。宫门左侧的八角井，相传当年许真君铸铁为柱，链钩地脉，以绝水患。宫外还有大量的辅助建筑，如接仙台、云会常、冲升阁等形成一个以万寿宫为中心的古建筑群。远眺西山万寿宫，万顷绿海中，琉璃瓦黄绿相间，绚丽多彩，飞檐串串铜铃，金光闪烁，层层斑澜的宫顶，突兀鹤立，天地氤氲、万物化淳，疑是天上宫阙。铁铸大吊针，重二吨余，入夜钟声宏浑悠扬，能传十里之遥。 农历正有二十七日是许真君诞上辰，为每年小朝；八月仙逝日为朝颧高潮，各地信民薰沐斋戒纷纷前来进香，成千上万的进香者比肩接踵、张袂成荫。他们进入宫后一步一跪拜，到殿前陈敬贡品，晋谒仙颜，祈祷自己的心愿。焚香炉前，鞭炮声不绝不耳，香火明烛通宵达旦，炉烟缥缈，钟声悠扬，一派仙家气氛。</item>
        <item>  梅岭风景区位于南昌市西郊。山势嵯峨，层峦叠翠，四时秀色，气候宜人。素有\"小庐山\"之称。 梅岭原名飞鸿山，早在汉朝初年，就辟有驿道。西汉末年，南昌县尉梅福为抵制王莽专政,退隐西郊飞鸿山。后人纪念他的高风亮节，在岭上建梅仙坛，岭下建梅仙观，改飞鸿山为梅岭。唐朝以来，有张九龄、张商英、周必大、王安石、张位五位丞相，欧阳修、曾巩、黄庭坚、陈师道、汤显祖等文学家，岳飞等武将，慕名而来，留下了许多名诗佳作和文人景观。\n梅岭是佛、道两教的圣地之一，寺庙观坛曾多达136处。道书称此为\"第十二洞天\"。西山八大名刹之首的翟岩寺，原有一尊1.6丈高的曾居云堂寺，8尺高的铜莲台和铜瓶、铜香炉、千僧锅。原道教名刹太平观旁有一株\"千年银杏\"，树高30米，胸围7.5米。位居山巅的紫阳宫，石室尚存，东汉开国元勋邓禹曾到此，旁有邓仙洞和真君墓。梅岭上百座山峰，各具特色。梅岭头翠竹生幽，狮子峰险峻难攀，紫阳山秀丽多姿，罗汉岭利于观景。梅岭有许多古树名木，尤以\"盆景樟\"、\"石中兰\"、\"树生竹\"为奇，被誉为\"梅岭三绝\"。</item>
    </string-array>
    <!--新生指南-->
    <string-array name="guids">
        <item>  整理新装备•行李物品
            "\n"  【资金费用】：现金，银行卡等满足学费，生活费所需。
            "\n"  【相关证件】：身份证，录取通知书，准考证，党团组织关系迁移材料，考生档案，以及证件所需照片20张以上。办理贷款申请的，更需要完备的材料。
            "\n"  【衣物鞋帽】：根据学校所在地气候，适当置备衣物。尽量避免由于考虑不周造成辛苦带到学校的衣物排不上用场，以及粗心大意没带足必要的衣物等情况。
            "\n"  【洗漱用具】：到校之后购买亦可。  洗漱用具和洗澡用具：牙膏、牙刷（1个学期至少2个）、水杯（刷牙1个，喝水1个）、香皂 肥皂各一个、香皂盒（2个，因为还要放洗衣皂）、盆（自己需要再买一个，洗脸用的）、澡筐、搓澡巾、浴花等。这些可以在学校超市买。毛巾2条，这个尽量在家带吧，学校超市里卖的质量不是很好。洗发精、护发素、沐浴液，男生用的剃须刀可等根据个人习惯酌情携带。洗衣服用具：洗衣粉（或洗衣液）、洗衣皂、胶皮手套（冬天洗衣服用）、衣服挂（10个左右）、裤子夹（3个左右）、大夹子（晒被子用）、小夹子，粘性挂钩若干。
            "\n"  【食物特产】：除旅途所需外，最好带些家乡特产与同学老师分享。【日常用品】：指甲刀、抹布、镜子、梳子、雨伞、雨衣（风大）、锁头（洗澡时候锁柜子用的）、挂钩（粘在柜子上挂东西）、针线包（经常要缝白大褂的扣子）、小垃圾桶、手电筒、闹钟、零钱包、眼镜、隐形眼镜及它们相关的东西。大家视自己需要程度准备。
            "\n"  【常被药品】：1、创可贴、纱布、胶布、棉球、碘伏（不要碘酒），抗生素药膏、烫伤膏、云南白药气雾剂、膏药等防止外伤药品  2、感冒药（白加黑、999等）、解热镇痛药（扑热息痛等）、抗生素（头孢拉定、红霉素等等）腹泻药（黄连素等）3、神经衰弱的同学最好自带调节睡眠的药物，大学生失眠是很普遍的现象，如果你睡觉很轻、入睡很困难，建议带眼罩和耳塞来 4、风油精、花露水等驱虫品5、维生素、钙片，以及营养补品6、防备水土不服的药品或偏方
            "\n"  【床单被褥】：一般学校都有提供，但质量难尽人意。路途不远的话还是推荐自备卧具。当然，也可以在学校附近的商场超市购买。床铺的规格多是90CM*200CM【电脑】：带电脑入学后面临网络接入问题，需要根据学校规定自行解决，也有部分学校规定大一禁止带电脑。【手机卡】：入校后需要办理新的手机卡，届时办卡优惠项目也很多，很多学校通知书也有附带手机卡。 "</item>
        <item>  抵达目的地•交通线路 新生可根据实际情况选择火车汽车飞机渡轮等交通工具，持录取通知书购票可享受优惠。规定报到期间，校方会在火车站，汽车站广场显眼处设置迎新接待点，只要准确无误的找到自己学校摊位，明确在哪个校区就读，即可听凭接待学长们的安排，由校车接送入校。乘飞机的话，可由机场大巴抵达所在城市，再转的士进校。自驾车只需要明确所在校区，进校后有学校人员安排停车位。</item>
        <item>  入校第一站•注册报到学校规定的新生报到期间，多会有专人负责24小时轮流接待，全程陪同完成注册报到手续。其基本流程是：
            "\n"  1抵达各自所在院系的注册接待点
            "\n"  2提交档案，录取通知书，照片等
            "\n"  3领取校园卡，校徽，宿舍钥匙
            "\n"  4领取卧具，生活用品，军训服装等
            "\n"  5未通过银行卡自动缴费的，可以到规定地点排队缴费
            "\n"  6申请入学贷款的，可由接待人员引导至绿色通道办理相应手续
            "\n"  7领取宿舍钥匙后，会由接待人员引导至各自宿舍
            "\n"  8多数学校会为随行家长开座谈会，介绍相关情况，解答问题等
            "\n"  9户口迁移，党团组织关系迁移等资料交由院系老师办理即可至此报道注册进行完毕。
            "\n"  Tips:新生入学的最初几天里，总会有各种形形色色的人出没于新生宿舍，他们都带有各自目的，并非只是慰问新同学。大致有如下几类：
            "\n"  1.学生干部及各界领导。他们一般是来释放对新生的关爱之情的，如果有联合国教科文组织的官员莅临的话，麻烦你一定要维护国人形象。
            "\n"  2.推销员。哪怕你准备得再周全，寝室生活总还有缺的东西。这时候，各种推销员就应运而生了。他们推销的内容应有尽有，比如牙刷毛巾床上用品脸盆电插板挂钩厕卫用具装饰品文具电视电脑冰箱洗衣机……推销员也可分两类，一是校外人员，二是校内学生。惯常的推荐做法是：校外人员一律轰走，校内学生热情接待，理性选择。这些推销用品，都是高年级学生去小商品市场自己批发来的，所以也很辛苦。他们的货，一般来讲比外面超市便宜，但质量参差不齐，你要自己好好鉴定了。如果实在不要，也请友好地表示不需要。毕竟他们都是你的师兄师姐，将来在一个学校低头不见抬头见的。如果不想买又不知如何开口，可以说：\"不好意思，已经有了，谢谢您！\"3.学生组织宣传员。他们是宣传各自的学生组织，拉你入伙的。那么，你就有必要了解一下学校都有哪些学生组织，以及各自发展前途如何，以决定自己的校园仕宦生涯。</item>
        <item>  我是一个兵•新生军训“军令的响亮急促、军歌的豪情万丈、军训的汗水淋漓”——军训是迎接新生的第一堂课，也将是广大新生难忘和骄傲的一段经历。每一个大学生入学最先经历的事就是军训，军训是一个锻炼意志体现个人品格的重要阶段，在军训中良好的表现不仅可以给教官、老师、同学留下一个好印象，而且还可以锻练自己的意志和毅力。同时军训也很苦很累的，注意保护好自己的身体也很重要，这里给广大新生提一些经验，以供参考，使大家能有一段愉快的军旅生活！
            "\n"  1、做好准备工作    出门前要认真检查军训服装，如：军帽、帽徽、臂章、腰带等。免得到时候\"英雄白走路\"。
            "\n"  2、装束一定要合适。迷彩服里再穿一件洗汗性好的棉制背心，否则你的迷彩服很快会晒出盐。腰带要适当紧一点，走起路来会更有精神劲儿；袜子最好穿棉制运动袜，鞋子里面再垫一块软鞋垫，这样脚后跟会舒服一点。
            "\n"  3、注意补充水分    以运动饮料和茶水，盐水最佳，不要拼命喝白开水或矿泉水。
            "\n"  4、注意补充营养    军训后体力消耗极大，这个时候不要亏待自己，多吃一些肉类、蛋类，最好还多喝点汤菜类，同时注意补充各种维生素。
            "\n"  5、注意防病    大雨或大汗淋漓后不要急于喝水，稍微休息片刻再补充水分，以免对肠胃突然加重负担造成伤害。
            "\n"  6、注意防晒    出门前半小时就要涂，因为防晒霜也要时间吸收。防晒霜要随身带，一般是二个小时就要涂一次。正确的步骤是先用吸油面纸擦干净脸，再涂防晒霜，不过军训汗出得多，只要教官让你休息你就涂；含有防护UVA功能的会比较好，比如还带有PA字样的防晒霜。
            "\n"  7、不要硬撑    军训中要讲“坚持再坚持”，但如果实在支持不下去，一定要休息，不要硬撑，防止出意外，特别是体质较差的同学。
            "\n"  8、按时作息    军训期间按时作息，养精蓄锐，为军训打下良好的硬基础。9、注意沟通    军训生活中要学会与同学沟通，有困难要学会虚心向同学和老师请教。如：着军装、走军步、站军姿、叠军被等。</item>
        <item>  生活万花筒•社团组织
            "\n"  一、学生社团学生社团形式多种多样，如学术问题、社会问题的讨论研究会，文学艺术、体育、音乐、美术等方面组成的活动小组，有文艺社、棋艺社、摄影社、美工社、歌咏队、话剧团、篮球队、足球队等等。学生社团的活动以保证完成学生的学习任务和不影响学校正常教学秩序为前提；以有益于学生的健康成长和有利于学校各项工作的进行为原则。学生社团组织和活动的目的是活跃学校的学习空气，提高学生自己管理自己的能力，丰富学生的课余生活。学生社团可以根据学校的不同情况利用学生的课余时间开展各种形式的活动，以交流思想，切磋技艺，互相启迪，增进友谊。 加入社团一般需要缴纳数额不等的会费，多数在10—20元左右。
            "\n"  二、学生会协助学校管理学生工作和操办学生活动的组织。主席团下设数个职能部门，一般包括办公室（秘书部）、宣传部、组织部、学习部、实践部、体育部、文艺部、生活部、纪律部（纪委、纪检部）、外联部（外宣部）、社团部、技术部等。
            "\n"  三、班委班长，团支书，学习委员，生活委员，文娱文员，心理委员等等，负责为班里同学的学习和生活服务，当然也能藉此更多的接触同学了解学校，并在各种评优评先中占据优势。四、其他青年志愿者协会，社团联合会，护校队，宿管会，各类自发的兴趣小组等</item>
        <item>  结交新朋友•人际交往
                 一、学会包容别人 很多同学没有住校经历，上大学之前一个人生活自由自在，突然要和几个人共用一个寝室，就必须包容别人的生活方式。如果别人的生活方式有碍于你的生活，就需要委婉地提出意见，并适当地进行自我调整(如调整作息时间)。
                 二、主动交往 要想处理好同学之间的关系，还要做到对人宽、对己严，切忌以我为中心，在平时的生活中，主动与同学打招呼，主动和同学讲话，主动帮助别人。此外，要主动去做些公共工作，以增加同学们的好感。三、讲究技巧 在与同学相处时应坦诚相待，但在给同学提意见时，必须动脑筋，讲究方法和技巧。需要注意的一点是，给别人提意见一定不能当着众人的面，以免使对方难堪、丢面子。</item>
        <item>  勤练有补贴•勤工助学勤工助学是指学生在学校的组织下利用课余时间，通过劳动取得合法报酬，用于改善学习和生活条件的社会实践活动。 大致可以分为两个渠道：校内岗位和校外岗位。    校内岗位关键在于学校里用于勤工俭学的预算，如果预算充足，岗位开发是没有问题的，你自己想岗位就太辛苦了。你可以设计一份岗位征求意见表格给各个部门或二级院系，说明费用由勤工俭学部统一出，岗位用于帮助各部门的工作，这样一定会有很多岗位被想出来，每个部门都希望有学生可以用来帮忙解决一些工作量的，前提是不需要自己或自己部门出钱。你所要做的就是统计和分配了。如果预算不多，那么就要设法多开发校外岗位。校外岗位不需要学校出资，但是需要你代表校方和校外岗位签订协议，确保学生的合法权益和酬劳。可以开发的有：家教、服务性行业短工（如快餐店、超市大卖场营业员收银员，市场调查员）等等……</item>
        <item>  学长学姐寄语大学新生：走出有自己特色的路大学生活是曲调变化多端的交响曲，有高亢，也有低沉；面对刚刚步入大学校园的师弟师妹们，我就谈谈自己曾经思考并努力去解答的几个问题吧，希望于你们能有所裨益。你的大学是什么？ 处于新鲜与兴奋中的你们或许还没意识到一个问题——“我的大学将是怎样？”，或者说就是你毕业后何去何从。“人无远虑，必有近忧”。最恐怖的事，不是比你厉害的人很多，而是比你厉害的人比你还努力。如果没有清楚的大学定位，人就很容易在伴随成长的各种诱惑中迷失方向，临近毕业，只能扼腕叹息。就业、读研、出国，你总得选择一个，早定方向早准备，就可少些焦虑多些踏实。大学阶段，什么是最重要的？不管是求知、做人、健体，还是修身养德，学习始终是最重要的。文化知识的学习是根本，不管你是否热爱自己的专业，做一名合格的学生是你大学阶段其他计划的保障，如果陷入了重修的噩梦，那么你就会失去很多平等竞争的机会，这就是校园的生存规律。更高层次的学习就是对社会的理解和与人的沟通，因为即使你将来读研、出国，最终还是要工作，那么好的交际能力是你求职成功、工作顺利的利器！勇于尝试，敢于突破，历练的目标是什么？  大学是开放的，既有五彩斑斓的校园生活，也有投身社会的各种实践机会，相信年轻的你们不甘于平淡的生活，总会有跃跃欲试的激情，那么就大胆地去尝试，不要轻易对自己说“不”，不要给自己羁绊，不要留给自己遗憾，年轻不存在失败！尝试就是一种成功，突破自我就是胜利，积极乐观应是你的正确心态，不要过多的在乎结果，只要你曾全心全力！付出一定有回报吗？人总渴望收获，甚至是不劳而获，但事情并不是这样简单。没有付出肯定没有回报，但是即使你付出了努力，有时也不一定会有好的结果。因此要能清楚认识到这点，敢于面对挫折，笑看得与失！大学的生活只能依靠自己的体会，别人走过的路终归是走过的，我仅是提出几个需要考虑的问题，希望毕业时你们会有新的体会，祝你们的大学生活开心而又精彩！</item>
    </string-array>
    <string-array name="title">
       <item>整理新装备</item>
       <item>抵达目的地</item>
       <item>入校第一站</item>
       <item>我是一个兵</item>
       <item>生活万花筒</item>
       <item>结交新朋友</item>
       <item>勤练有补贴</item>
       <item>学长学姐寄语大学新生</item>
    </string-array>
    <string-array name="title2">
        <item>滕王阁</item>
        <item>八大山人纪念馆</item>
        <item>罕王峰</item>
        <item>象山森林公园</item>
        <item>西山万寿宫</item>
        <item>梅岭</item>
    </string-array>
</resources>
