<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/plus"
        app:showAsAction="never"
        android:orderInCategory="10"/>
    <item
        android:id="@+id/action_upload"
        android:title="@string/action_upload"
        android:icon="@drawable/up"
        app:showAsAction="never"
        android:orderInCategory="8"/>

    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/down"
        app:showAsAction="never"
        android:orderInCategory="11"/>
    <item
        android:id="@+id/action_search2"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="9"
        />
</menu>